# SoapyAirspy

./: CMakeLists.txt  Changelog.txt  FindLibAIRSPY.cmake  LICENSE.txt  README.md  Registation.cpp  Registration.cpp  Settings.cpp  SoapyAirspy.hpp  Streaming.cpp
.github/patches/: airspy_windows.patch
.github/workflows/: build.yml  ci.yml
debian/: changelog  control  copyright
